--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,4 +1,132 @@
 {
-    "greeting": "Hola",
-    "welcome": "¡Bienvenido a mi aplicación!"
-  }
+  "greeting": "Hola",
+  "welcome": "Bienvenido a mi aplicación",
+  "home": "Inicio",
+  "about": "Acerca de",
+  "contact": "Contacto",
+  "login": "Iniciar sesión",
+  "logout": "Cerrar sesión",
+  "signup": "Registrarse",
+  "profile": "Perfil",
+  "settings": "Configuración",
+  "search": "Buscar",
+  "submit": "Enviar",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "delete": "Eliminar",
+  "edit": "Editar",
+  "view": "Ver",
+  "back": "Atrás",
+  "next": "Siguiente",
+  "previous": "Anterior",
+  "loading": "Cargando...",
+  "error": "Error",
+  "success": "Éxito",
+  "warning": "Advertencia",
+  "info": "Información",
+  "confirm": "Confirmar",
+  "areYouSure": "¿Estás seguro?",
+  "yes": "Sí",
+  "no": "No",
+  "pleaseWait": "Por favor, espere...",
+  "thankYou": "Gracias",
+  "invalidInput": "Entrada inválida",
+  "requiredField": "Este campo es obligatorio",
+  "email": "Correo electrónico",
+  "password": "Contraseña",
+  "forgotPassword": "¿Olvidaste tu contraseña?",
+  "resetPassword": "Restablecer contraseña",
+  "newPassword": "Nueva contraseña",
+  "confirmPassword": "Confirmar contraseña",
+  "rememberMe": "Recuérdame",
+  "termsAndConditions": "Términos y condiciones",
+  "privacyPolicy": "Política de privacidad",
+  "copyright": "Derechos de autor",
+  "allRightsReserved": "Todos los derechos reservados",
+  "pageNotFound": "Página no encontrada",
+  "goToHomepage": "Ir a la página de inicio",
+  "userProfile": "Perfil de usuario",
+  "changeLanguage": "Cambiar idioma",
+  "language": "Idioma",
+  "english": "Inglés",
+  "spanish": "Español",
+  "french": "Francés",
+  "darkMode": "Modo oscuro",
+  "lightMode": "Modo claro",
+  "notifications": "Notificaciones",
+  "help": "Ayuda",
+  "feedback": "Comentarios",
+  "dashboard": "Panel de control",
+  "reports": "Informes",
+  "analytics": "Análisis",
+  "support": "Soporte",
+  "documentation": "Documentación",
+  "version": "Versión",
+  "logoutConfirmation": "¿Estás seguro de que deseas cerrar sesión?",
+  "loginSuccessful": "Inicio de sesión exitoso",
+  "loginFailed": "Inicio de sesión fallido",
+  "signupSuccessful": "Registro exitoso",
+  "signupFailed": "Registro fallido",
+  "passwordResetSuccessful": "Contraseña restablecida con éxito",
+  "passwordResetFailed": "Error al restablecer la contraseña",
+  "profileUpdated": "Perfil actualizado",
+  "profileUpdateFailed": "Error al actualizar el perfil",
+  "settingsUpdated": "Configuración actualizada",
+  "settingsUpdateFailed": "Error al actualizar la configuración",
+  "dataLoaded": "Datos cargados",
+  "dataLoadFailed": "Error al cargar los datos",
+  "noDataAvailable": "No hay datos disponibles",
+  "tryAgain": "Intentar de nuevo",
+  "connectionError": "Error de conexión",
+  "serverError": "Error del servidor",
+  "unauthorizedAccess": "Acceso no autorizado",
+  "sessionExpired": "Sesión expirada",
+  "pleaseLoginAgain": "Por favor, inicie sesión nuevamente",
+  "invalidCredentials": "Credenciales inválidas",
+  "accountLocked": "Cuenta bloqueada",
+  "accountUnlocked": "Cuenta desbloqueada",
+  "accountDeleted": "Cuenta eliminada",
+  "accountDeletionFailed": "Error al eliminar la cuenta",
+  "accountCreated": "Cuenta creada",
+  "accountCreationFailed": "Error al crear la cuenta",
+  "accountSuspended": "Cuenta suspendida",
+  "accountReactivated": "Cuenta reactivada",
+  "accountVerified": "Cuenta verificada",
+  "accountVerificationFailed": "Error al verificar la cuenta",
+  "emailSent": "Correo electrónico enviado",
+  "emailFailed": "Error al enviar el correo electrónico",
+  "emailVerified": "Correo electrónico verificado",
+  "emailVerificationFailed": "Error al verificar el correo electrónico",
+  "phoneVerified": "Teléfono verificado",
+  "phoneVerificationFailed": "Error al verificar el teléfono",
+  "twoFactorAuthentication": "Autenticación de dos factores",
+  "twoFactorAuthenticationEnabled": "Autenticación de dos factores habilitada",
+  "twoFactorAuthenticationDisabled": "Autenticación de dos factores deshabilitada",
+  "securitySettings": "Configuración de seguridad",
+  "privacySettings": "Configuración de privacidad",
+  "notificationSettings": "Configuración de notificaciones",
+  "languageSettings": "Configuración de idioma",
+  "themeSettings": "Configuración de tema",
+  "generalSettings": "Configuración general",
+  "advancedSettings": "Configuración avanzada",
+  "userManagement": "Gestión de usuarios",
+  "roleManagement": "Gestión de roles",
+  "permissionManagement": "Gestión de permisos",
+  "systemSettings": "Configuración del sistema",
+  "systemLogs": "Registros del sistema",
+  "systemHealth": "Estado del sistema",
+  "systemPerformance": "Rendimiento del sistema",
+  "systemUpdates": "Actualizaciones del sistema",
+  "systemBackup": "Copia de seguridad del sistema",
+  "systemRestore": "Restauración del sistema",
+  "systemMonitoring": "Monitorización del sistema",
+  "systemAlerts": "Alertas del sistema",
+  "systemReports": "Informes del sistema",
+  "systemAnalytics": "Análisis del sistema",
+  "systemDocumentation": "Documentación del sistema",
+  "systemSupport": "Soporte del sistema",
+  "systemFeedback": "Comentarios del sistema",
+  "systemVersion": "Versión del sistema",
+  "systemCopyright": "Derechos de autor del sistema",
+  "systemAllRightsReserved": "Todos los derechos reservados del sistema"
+}
