--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,4 +1,132 @@
 {
-    "greeting": "Bonjour",
-    "welcome": "Bienvenue dans mon application !"
-  }
+  "greeting": "Bonjour",
+  "welcome": "Bienvenue sur mon application",
+  "home": "Accueil",
+  "about": "À propos",
+  "contact": "Contact",
+  "login": "Connexion",
+  "logout": "Déconnexion",
+  "signup": "S'inscrire",
+  "profile": "Profil",
+  "settings": "Paramètres",
+  "search": "Rechercher",
+  "submit": "Soumettre",
+  "cancel": "Annuler",
+  "save": "Enregistrer",
+  "delete": "Supprimer",
+  "edit": "Modifier",
+  "view": "Voir",
+  "back": "Retour",
+  "next": "Suivant",
+  "previous": "Précédent",
+  "loading": "Chargement...",
+  "error": "Erreur",
+  "success": "Succès",
+  "warning": "Avertissement",
+  "info": "Information",
+  "confirm": "Confirmer",
+  "areYouSure": "Êtes-vous sûr ?",
+  "yes": "Oui",
+  "no": "Non",
+  "pleaseWait": "Veuillez patienter...",
+  "thankYou": "Merci",
+  "invalidInput": "Entrée invalide",
+  "requiredField": "Ce champ est obligatoire",
+  "email": "E-mail",
+  "password": "Mot de passe",
+  "forgotPassword": "Mot de passe oublié ?",
+  "resetPassword": "Réinitialiser le mot de passe",
+  "newPassword": "Nouveau mot de passe",
+  "confirmPassword": "Confirmer le mot de passe",
+  "rememberMe": "Se souvenir de moi",
+  "termsAndConditions": "Conditions générales",
+  "privacyPolicy": "Politique de confidentialité",
+  "copyright": "Droits d'auteur",
+  "allRightsReserved": "Tous droits réservés",
+  "pageNotFound": "Page non trouvée",
+  "goToHomepage": "Aller à la page d'accueil",
+  "userProfile": "Profil de l'utilisateur",
+  "changeLanguage": "Changer de langue",
+  "language": "Langue",
+  "english": "Anglais",
+  "spanish": "Espagnol",
+  "french": "Français",
+  "darkMode": "Mode sombre",
+  "lightMode": "Mode clair",
+  "notifications": "Notifications",
+  "help": "Aide",
+  "feedback": "Commentaires",
+  "dashboard": "Tableau de bord",
+  "reports": "Rapports",
+  "analytics": "Analytique",
+  "support": "Support",
+  "documentation": "Documentation",
+  "version": "Version",
+  "logoutConfirmation": "Êtes-vous sûr de vouloir vous déconnecter ?",
+  "loginSuccessful": "Connexion réussie",
+  "loginFailed": "Échec de la connexion",
+  "signupSuccessful": "Inscription réussie",
+  "signupFailed": "Échec de l'inscription",
+  "passwordResetSuccessful": "Réinitialisation du mot de passe réussie",
+  "passwordResetFailed": "Échec de la réinitialisation du mot de passe",
+  "profileUpdated": "Profil mis à jour",
+  "profileUpdateFailed": "Échec de la mise à jour du profil",
+  "settingsUpdated": "Paramètres mis à jour",
+  "settingsUpdateFailed": "Échec de la mise à jour des paramètres",
+  "dataLoaded": "Données chargées",
+  "dataLoadFailed": "Échec du chargement des données",
+  "noDataAvailable": "Aucune donnée disponible",
+  "tryAgain": "Réessayer",
+  "connectionError": "Erreur de connexion",
+  "serverError": "Erreur du serveur",
+  "unauthorizedAccess": "Accès non autorisé",
+  "sessionExpired": "Session expirée",
+  "pleaseLoginAgain": "Veuillez vous reconnecter",
+  "invalidCredentials": "Identifiants invalides",
+  "accountLocked": "Compte verrouillé",
+  "accountUnlocked": "Compte déverrouillé",
+  "accountDeleted": "Compte supprimé",
+  "accountDeletionFailed": "Échec de la suppression du compte",
+  "accountCreated": "Compte créé",
+  "accountCreationFailed": "Échec de la création du compte",
+  "accountSuspended": "Compte suspendu",
+  "accountReactivated": "Compte réactivé",
+  "accountVerified": "Compte vérifié",
+  "accountVerificationFailed": "Échec de la vérification du compte",
+  "emailSent": "E-mail envoyé",
+  "emailFailed": "Échec de l'envoi de l'e-mail",
+  "emailVerified": "E-mail vérifié",
+  "emailVerificationFailed": "Échec de la vérification de l'e-mail",
+  "phoneVerified": "Téléphone vérifié",
+  "phoneVerificationFailed": "Échec de la vérification du téléphone",
+  "twoFactorAuthentication": "Authentification à deux facteurs",
+  "twoFactorAuthenticationEnabled": "Authentification à deux facteurs activée",
+  "twoFactorAuthenticationDisabled": "Authentification à deux facteurs désactivée",
+  "securitySettings": "Paramètres de sécurité",
+  "privacySettings": "Paramètres de confidentialité",
+  "notificationSettings": "Paramètres de notification",
+  "languageSettings": "Paramètres de langue",
+  "themeSettings": "Paramètres de thème",
+  "generalSettings": "Paramètres généraux",
+  "advancedSettings": "Paramètres avancés",
+  "userManagement": "Gestion des utilisateurs",
+  "roleManagement": "Gestion des rôles",
+  "permissionManagement": "Gestion des permissions",
+  "systemSettings": "Paramètres du système",
+  "systemLogs": "Journaux du système",
+  "systemHealth": "État du système",
+  "systemPerformance": "Performance du système",
+  "systemUpdates": "Mises à jour du système",
+  "systemBackup": "Sauvegarde du système",
+  "systemRestore": "Restauration du système",
+  "systemMonitoring": "Surveillance du système",
+  "systemAlerts": "Alertes du système",
+  "systemReports": "Rapports du système",
+  "systemAnalytics": "Analyse du système",
+  "systemDocumentation": "Documentation du système",
+  "systemSupport": "Support du système",
+  "systemFeedback": "Commentaires du système",
+  "systemVersion": "Version du système",
+  "systemCopyright": "Droits d'auteur du système",
+  "systemAllRightsReserved": "Tous droits réservés du système"
+}
