--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
-  "greeting": "Bonjour",
-  "welcome": "Bienvenue sur mon application",
+ "greeting": "Bonjour, bienvenue sur notre application !",
+  "welcome": "Nous sommes ravis de vous avoir ici. Explorez et profitez-en !",
   "home": "Accueil",
   "about": "À propos",
   "contact": "Contact",
