--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
-  "greeting": "Hola",
-  "welcome": "Bienvenido a mi aplicación",
+ "greeting": "¡Hola, bienvenido a nuestra aplicación!",
+  "welcome": "Estamos emocionados de tenerte aquí. ¡Explora y disfruta!",
   "home": "Inicio",
   "about": "Acerca de",
   "contact": "Contacto",
